--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install qemu-user-aarch64
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu-user-static
       - name: Build container image
         id: build
         uses: redhat-actions/buildah-build@v2
